Google Adsense implementation has been finished.

--- a/.env_sample
+++ b/.env_sample
@@ -120,6 +120,10 @@ HONEYCOMB_API_KEY=""
 # When blank don't render Google Analytics.
 GA_TRACKING_ID=""
 
+# Google adsense
+# When blank don't render Google Adsense.
+GA_PUBLISHER_ID=""
+
 # Mailchimp for mails
 # (https://mailchimp.com/developer/)
 MAILCHIMP_API_KEY="Optional-valid"
