--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ qa ]
-  pull_request:
-    branches: [ qa ]
+    branches: [ main, qa, adsense ]
 
 jobs:
 
@@ -14,6 +12,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Git checkout
+      uses: actions/checkout@v3
+    - name: Branch name
+      run: echo running on branch ${GITHUB_REF##*/}
     - name: docker login
       env: 
         DOCKER_USER: ${{secrets.DOCKER_USER}}
@@ -21,6 +23,6 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the docker image
-      run: docker build . --file Dockerfile --tag ce7in/forem:$(date +%s)
+      run: docker build . --file Dockerfile --tag ce7in/forem:${GITHUB_REF##*/}
     - name: Docker push
       run: docker push ${{secrets.DOCKER_USER}}/forem
