--- a/.github/workflows/docker-image-qa.yml
+++ b/.github/workflows/docker-image-qa.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main, qa, adsense ]
+    branches: [ qa ]
 
 jobs:
 
@@ -12,10 +12,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Git checkout
-      uses: actions/checkout@v3
-    - name: Branch name
-      run: echo running on branch ${GITHUB_REF##*/}
     - name: docker login
       env: 
         DOCKER_USER: ${{secrets.DOCKER_USER}}
@@ -23,6 +19,6 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
     - name: Build the docker image
-      run: docker build . --file Dockerfile --tag ce7in/forem:${GITHUB_REF##*/}
+      run: docker build . --file Dockerfile --tag ce7in/forem:qa
     - name: Docker push
       run: docker push ${{secrets.DOCKER_USER}}/forem
