--- a/.github/workflows/docker-image-qa.yml
+++ b/.github/workflows/docker-image-qa.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main, qa, adsense ]
+    branches: [ qa ]
 
 jobs:
 
@@ -11,18 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Git checkout
-      uses: actions/checkout@v3
-    - name: Branch name
-      run: echo running on branch ${GITHUB_REF##*/}
-    - name: docker login
-      env: 
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-    - name: Build the docker image
-      run: docker build . --file Dockerfile --tag ce7in/forem:${GITHUB_REF##*/}
-    - name: Docker push
-      run: docker push ${{secrets.DOCKER_USER}}/forem:${GITHUB_REF##*/}
+      - uses: actions/checkout@v3
+      - name: Git checkout
+        uses: actions/checkout@v3
+      - name: Branch name
+        run: echo running on branch ${GITHUB_REF##*/}
+      - name: docker login
+        env:
+          DOCKER_USER: ${{secrets.DOCKER_USER}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+      - name: Build the docker image
+        run: docker build . --file Dockerfile --tag ce7in/forem:${GITHUB_REF##*/}
+      - name: Docker push
+        run: docker push ${{secrets.DOCKER_USER}}/forem:${GITHUB_REF##*/}
