--- a/config/reactions.yml
+++ b/config/reactions.yml
@@ -3,29 +3,31 @@ like:
   position: 1
   name: Like
   icon: sparkle-heart
-unicorn:
+thumbsup:
   position: 2
+  score: 5.0
+  icon: thumb-up
+thumbsdown:
+  position: 3
+  score: -10.0
+  icon: thumb-down
+unicorn:
+  position: 4
   name: Unicorn
   icon: multi-unicorn
 exploding_head:
-  position: 3
+  position: 5
   icon: exploding-head
 raised_hands:
-  position: 4
+  position: 6
   icon: raised-hands
 fire:
-  position: 5
+  position: 7
   icon: fire
 readinglist:
-  position: 5
+  position: 7
   icon: save
   published: false
-thumbsup:
-  privileged: true
-  score: 5.0
-thumbsdown:
-  privileged: true
-  score: -10.0
 vomit:
   privileged: true
   name: Vomit
